plugins {
    id 'org.springframework.boot' version '2.1.6.RELEASE'
    id 'io.spring.dependency-management' version "1.0.8.RELEASE"
    id 'java'
    id 'idea'
}

group = 'ru.hse.coursework'
version = '2.0'
sourceCompatibility = '11'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile(
//            SPRING
            'org.springframework.boot:spring-boot-starter-web',
            'org.springframework.boot:spring-boot-starter-data-jpa',
            'org.springframework.boot:spring-boot-starter-mail',
            'org.springframework.boot:spring-boot-starter-logging',
            'org.springframework.statemachine:spring-statemachine-core:2.2.0.RELEASE',

//            DATABASE
            'org.hibernate:hibernate-search-orm:5.11.2.Final',
            'org.hibernate:hibernate-jcache',
            'org.ehcache:ehcache:3.3.1',
            'org.hibernate.validator:hibernate-validator',
            'org.liquibase:liquibase-core',

//            AUTH
            'at.favre.lib:bcrypt:0.7.0',
            'com.auth0:java-jwt:3.3.0',
            
//            COMMON
            'com.google.guava:guava:28.0-jre',
            'org.apache.commons:commons-lang3:3.9',
            'com.google.apis:google-api-services-oauth2:v2-rev157-1.25.0',
            'com.fasterxml.uuid:java-uuid-generator:3.2.0',
            'one.util:streamex:0.7.2',

//            SWAGGER
            'io.springfox:springfox-swagger2:2.9.2',
            'io.springfox:springfox-swagger-ui:2.9.2'
    )
    runtime(
            'org.postgresql:postgresql'
    )
    compileOnly(
            'org.projectlombok:lombok:1.18.6'
    )
    testCompile(
            'org.springframework.boot:spring-boot-starter-test',
            'org.junit.jupiter:junit-jupiter-api:5.3.2',
            'org.mockito:mockito-junit-jupiter:2.25.0',
            'com.h2database:h2:1.3.148',
            'org.unitils:unitils-core:3.4.6'
    )
    testRuntime(
            'org.junit.jupiter:junit-jupiter-engine:5.3.2'
    )
    annotationProcessor('org.projectlombok:lombok:1.18.6')
}

configurations {
    compile.exclude module: 'junit'
}

test {
    useJUnitPlatform()
    systemProperty "user.dir", "$buildDir".toString()
}

idea {
    module {
        inheritOutputDirs = false
        outputDir = file("$buildDir/classes/main/")
        testOutputDir = file("$buildDir/classes/test")
    }
}
